<?xml version="1.0"?>

<package>

  <name>mpi_cmake_modules</name>
  <version>1.0.0</version>
  <license>BSD 3-Clause</license>
  <author email="mnaveau@tuebingen.mpg.de">Maximilien Naveau</author>
  <maintainer email="mberenz@tuebingen.mpg.de">Vincent Berenz</maintainer>
  <description>
      Contains useful cmake macros
  </description>
  <buildtool_depend>catkin</buildtool_depend>

</package>
