<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

 <name>mpi_cmake_modules</name>
 <version>1.0.0</version>
 <description>
    CMake module use in the machines-in-motion group.
    https://machines-in-motion.github.io/
 </description>
 <author email="mnaveau@tuebingen.mpg.de">Maximilien Naveau</author>
 <maintainer email="mberenz@tuebingen.mpg.de">Vincent Berenz</maintainer>
 <license>BSD 3-clause</license>

 <buildtool_depend>ament_cmake</buildtool_depend>
 <buildtool_depend>ament_cmake_python</buildtool_depend>

 <export>
   <build_type>ament_cmake</build_type>
 </export>

</package>